<resources>
    <string name="app_name">HospiToolsV2</string>
    <string name="create_patient">Create Patient</string>
    <string name="view_patients">View Patients</string>
    <string name="find_hospital">Find Hospital</string>
    <string name="family_members">Family Members</string>
    <string name="welcome_to_hospitools">Welcome to HospiTools!</string>
    <string name="insert_patient_data">Insert Patient Data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="patient_number">Patient Number</string>
    <string name="patient_gender">Patient Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="patient_email">Patient Email</string>
    <string name="go_back">Go Back</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="location_permission_denied">User denied permission for device location.</string>
    <string name="add_patient_data">Add Patient Data</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="number_format">XXX-XXX-XXXX</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Find an address</string>
    <string name="nothing_found">Nothing found for</string>


    <string-array name="Hospitals">
        <item>Touro</item>
        <item>Oschner</item>
        <item>University</item>
    </string-array>


    <string-array name="Procedures">
        <item>Headache</item>
        <item>Foreign Object</item>
        <item>Skin Infection</item>
        <item>Back Pain</item>
        <item>Cuts and Contusions</item>
        <item>Upper Respiratory Infection</item>
        <item>Broken Bones and Sprains</item>
        <item>Toothaches</item>
        <item>Abdominal Pain</item>
        <item>Chest Pain</item>


    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>


</resources>
