<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context = "com.example.hospitoolsv2.ViewPatients">


    <item
        android:id="@+id/patient_edit"
        android:orderInCategory="100"
        android:title="@string/edit_patient"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/patient_data"
        android:orderInCategory="100"
        android:title="@string/add_patient_data"
        app:showAsAction="collapseActionView"
        />

    <item
        android:id="@+id/patient_delete"
        android:orderInCategory="100"
        android:title="@string/delete_patient"
        app:showAsAction="collapseActionView"
        />




</menu>