<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/Welcome_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_hospitools"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/create_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_patient"
        app:layout_constraintBottom_toTopOf="@id/find_Hospital"
        app:layout_constraintTop_toBottomOf="@id/Welcome_TV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_btn"
        />

    <Button
        android:id="@+id/view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_patients"
        app:layout_constraintBottom_toTopOf="@id/find_Hospital"
        app:layout_constraintTop_toBottomOf="@id/Welcome_TV"
        app:layout_constraintStart_toEndOf="@id/create_btn"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/find_Hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_hospital"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/family_btn"
        />


    <Button
        android:id="@+id/family_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family_members"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_btn"
        app:layout_constraintStart_toEndOf="@id/find_Hospital"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>