<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    tools:context=".CreatePatient"
    android:layout_marginStart="15dp">

    <TextView
        android:id="@+id/create_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_patient_data"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/first_name_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@id/last_name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_TV" />

    <EditText
        android:id="@+id/first_name_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/last_name_et"
        app:layout_constraintStart_toEndOf="@id/first_name_TV"
        app:layout_constraintTop_toBottomOf="@id/create_TV" />

    <TextView
        android:id="@+id/last_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@id/number_TV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_ET" />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/number_et"
        app:layout_constraintStart_toEndOf="@id/last_name_tv"
        app:layout_constraintTop_toBottomOf="@id/first_name_ET"


        />

    <TextView
        android:id="@+id/number_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_number"
        app:layout_constraintBottom_toTopOf="@id/gender_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_tv" />

    <EditText
        android:id="@+id/number_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/gender_et"
        app:layout_constraintStart_toEndOf="@id/number_TV"
        app:layout_constraintTop_toBottomOf="@id/last_name_tv" />

    <TextView
        android:id="@+id/gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_gender"
        app:layout_constraintBottom_toTopOf="@id/date_of_birth_TV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_TV" />

    <EditText
        android:id="@+id/gender_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/date_of_birth_et"
        app:layout_constraintStart_toEndOf="@id/gender_tv"
        app:layout_constraintTop_toBottomOf="@id/number_TV" />

    <TextView
        android:id="@+id/date_of_birth_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        app:layout_constraintBottom_toTopOf="@id/patient_email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_tv" />

    <EditText
        android:id="@+id/date_of_birth_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@id/patient_email_eT"
        app:layout_constraintStart_toEndOf="@id/date_of_birth_TV"
        app:layout_constraintTop_toBottomOf="@id/gender_tv" />

    <TextView
        android:id="@+id/patient_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_email"
        app:layout_constraintBottom_toBottomOf="@id/create_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth_et" />

    <EditText
        android:id="@+id/patient_email_eT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/create_btn"
        app:layout_constraintStart_toEndOf="@id/patient_email_tv"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth_et" />


    <Button
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_patient"
        app:layout_constraintTop_toBottomOf="@id/patient_email_eT"
        app:layout_constraintBottom_toTopOf="@id/goBack_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="insertPatient"/>

    <Button
        android:id="@+id/goBack_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintTop_toBottomOf="@id/create_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="goBack"/>

</android.support.constraint.ConstraintLayout>